--- a/html5.html
+++ b/html5.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <title>html5 Leonardo García De Luna</title>
+</head>
+<body>
+  <p> <b>HTML5</b> (<i>HyperText Markup Language</i>, versión 5) es la <del>tercera</del> <u>quinta</u> revisión importante del lenguaje básicop de la <del>Internet</del> <u>World Wide Web</u>
+  </p>
+</body>
+</html>
