--- a/html5.html
+++ b/html5.html
@@ -5,7 +5,7 @@
   <title>html5 Leonardo García De Luna</title>
 </head>
 <body>
-  <p> <b>HTML5</b> (<i>HyperText Markup Language</i>, versión 5) es la <del>tercera</del> <u>quinta</u> revisión importante del lenguaje básicop de la <del>Internet</del> <u>World Wide Web</u>
+  <p> <b>HTML5</b> (<i>HyperText Markup Language</i>, versión 5) es la <del>tercera</del> <u>quinta</u> revisión importante del lenguaje básico de la <del>Internet</del> <u>World Wide Web</u>
   </p>
 </body>
 </html>
