--- a/imagenes.html
+++ b/imagenes.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <title>Imagenes Leonardo García De Luna</title>
+</head>
+<body>
+</body>
+</html>
