--- a/imagenes.html
+++ b/imagenes.html
@@ -5,5 +5,7 @@
   <title>Imagenes Leonardo García De Luna</title>
 </head>
 <body>
+  <img src="img/M. Alvariño.webp" alt="Miguel Alvariño T.con arco">
+   <img src="img/M. Alvariño.webp" alt="Michael Jordan matye Baloncesto">
 </body>
 </html>
