--- a/imagenes.html
+++ b/imagenes.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <img src="img/M. Alvariño.webp" alt="Miguel Alvariño T.con arco">
-   <img src="img/M. Alvariño.webp" alt="Michael Jordan matye Baloncesto">
+   <img src="img/m.jordan.webp" alt="Michael Jordan mate Baloncesto">
 </body>
 </html>
