--- a/anclas.html
+++ b/anclas.html
@@ -1,6 +1,6 @@
 <body>
-  <a href="#T16">Ir al Tema 16</a>
-  <a href="#T19">Ir al Tema 19</a>
+  <a href="#T16">Ir al Tema 16</a><br>
+  <a href="#T19">Ir al Tema 19</a><br>
   <a href="#T20">Ir al Tema 20</a>
     <h2>Tema 1</h2>
     <p>contenido del tema 1
