--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
 </head>
 <body>
   <p>Mi primera página web.</p>
+<a href="https://lgdeluna.github.io/DTP-WEB/ExploracionEspacial.html" >Exploración espacial</a>
+<a href="https://lgdeluna.github.io/DTP-WEB/anclas.html" >anclas</a>
+<a href="https://lgdeluna.github.io/DTP-WEB/html5.html" >html5</a>
+<a href="https://lgdeluna.github.io/DTP-WEB/imagenes.html" >imágenes</a>
+<a href="https://lgdeluna.github.io/DTP-WEB/plantilla_base.html" >plantilla_base</a>
+<a href="https://lgdeluna.github.io/DTP-WEB/img/imagenes2(ahora_es_personal).html" >Imágenes2(ahora es personal)</a>
+
 </body>
 </html>
