--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 <a href="https://lgdeluna.github.io/DTP-WEB/plantilla_base.html" >plantilla_base</a>
 <a href="https://lgdeluna.github.io/DTP-WEB/img/imagenes2(ahora_es_personal).html" >Imágenes2(ahora es personal)</a>
 
+  <a href="https://aulavirtual.murciaeduca.es/course/view.php?id=99660&section=0#tabs-tree-start" target="_blank">Aula Virtual</a>
+  <a href="https://github.com/Lgdeluna/DTP-WEB" target="_blank">repositorio de Github</a>
+
 </body>
 </html>
