--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 </head>
 <body>
   <p>Mi primera página web.</p>
-<a href="https://lgdeluna.github.io/DTP-WEB/ExploracionEspacial.html" >Exploración espacial</a>
-<a href="https://lgdeluna.github.io/DTP-WEB/anclas.html" >anclas</a>
-<a href="https://lgdeluna.github.io/DTP-WEB/html5.html" >html5</a>
-<a href="https://lgdeluna.github.io/DTP-WEB/imagenes.html" >imágenes</a>
-<a href="https://lgdeluna.github.io/DTP-WEB/plantilla_base.html" >plantilla_base</a>
-<a href="https://lgdeluna.github.io/DTP-WEB/img/imagenes2(ahora_es_personal).html" >Imágenes2(ahora es personal)</a>
-
-  <a href="https://aulavirtual.murciaeduca.es/course/view.php?id=99660&section=0#tabs-tree-start" target="_blank">Aula Virtual</a>
-  <a href="https://github.com/Lgdeluna/DTP-WEB" target="_blank">repositorio de Github</a>
+<a href="https://lgdeluna.github.io/DTP-WEB/ExploracionEspacial.html" >Exploración espacial</a> <br>
+<a href="https://lgdeluna.github.io/DTP-WEB/anclas.html" >anclas</a> <br>
+<a href="https://lgdeluna.github.io/DTP-WEB/html5.html" >html5</a> <br>
+<a href="https://lgdeluna.github.io/DTP-WEB/imagenes.html" >imágenes</a> <br>
+<a href="https://lgdeluna.github.io/DTP-WEB/plantilla_base.html" >plantilla_base</a> <br>
+<a href="https://lgdeluna.github.io/DTP-WEB/img/imagenes2(ahora_es_personal).html" >Imágenes2(ahora es personal)</a> <br>
+<br>
+  <a href="https://aulavirtual.murciaeduca.es/course/view.php?id=99660&section=0#tabs-tree-start" target="_blank">Aula Virtual</a> <br>
+  <a href="https://github.com/Lgdeluna/DTP-WEB" target="_blank">repositorio de Github</a> <br>
 
 </body>
 </html>
