--- a/imagenes.html
+++ b/imagenes.html
@@ -7,6 +7,6 @@
 <body>
   <img src="img/M. Alvariño.webp" alt="Miguel Alvariño T.con arco">
   <img src="img/m.jordan.webp" alt="Michael Jordan mate Baloncesto">
-  <a href="https://commons.wikimedia.org/wiki/File:Krakow_-_Wawel_from_Vistula_-_4.jpg">Castillo random de wikimedia</a>
+  <img src="https://commons.wikimedia.org/wiki/File:Krakow_-_Wawel_from_Vistula_-_4.jpg" alt="Castillo wikipedia"
 </body>
 </html>
