--- a/imagenes.html
+++ b/imagenes.html
@@ -7,6 +7,6 @@
 <body>
   <img src="img/M. Alvariño.webp" alt="Miguel Alvariño T.con arco">
   <img src="img/m.jordan.webp" alt="Michael Jordan mate Baloncesto">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Peppers_in_water.jpg/500px-Peppers_in_water.jpg" alt="Pimientos random"
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Peppers_in_water.jpg/500px-Peppers_in_water.jpg" alt="Pimientos random">
 </body>
 </html>
