--- a/img/imagenes2(ahora_es_personal).html
+++ b/img/imagenes2(ahora_es_personal).html
@@ -7,6 +7,6 @@
 <body>
   <img src="M. Alvariño.webp" alt="Miguel Alvariño T.con arco">
   <img src="m.jordan.webp" alt="Michael Jordan mate Baloncesto">
-  <a href="https://commons.wikimedia.org/wiki/File:Krakow_-_Wawel_from_Vistula_-_4.jpg">Castillo random de wikimedia</a>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Peppers_in_water.jpg/500px-Peppers_in_water.jpg" alt="Pimientos random">
 </body>
 </html>
