--- a/plantilla_base.html
+++ b/plantilla_base.html
@@ -5,5 +5,23 @@
   <title></title>
 </head>
 <body>
+  <table>
+    <tr> <th>HORA</th><th>MIÉRCOLES</th><th>VIERNES</th>
+    </tr>
+    <tr> <th>8:15-9:10</th><th>Física</th><th>Filosofía</th>
+    </tr>
+    <tr> <th>9:10-10:05</th><th>Química</th>Matemáticas<th>                                                                                                         </th>
+    </tr>
+    <tr> <th>10:05-11:00</th>DyP<th></th><th>Inglés</th>
+    </tr>
+    <tr> <th>11:00-11:30</th>RE<th></th><th>CREO</th>
+    </tr>
+    <tr> <th>11:30-12:25</th>His. España<th></th><th>Lengua</th>
+    </tr>
+     <tr> <th>12:25-13:20</th>Matemáticas<th></th><th>DyP</th>
+    </tr>
+     <tr> <th>13:20-14:15</th>Lengua<th></th><th>His. España</th>
+    </tr>
+  </table>
 </body>
 </html>
