--- a/plantilla_base.html
+++ b/plantilla_base.html
@@ -5,7 +5,7 @@
   <title></title>
 </head>
 <body>
-  <table>
+  <table border=35>
     <tr> <th>HORA</th><th>MIÉRCOLES</th><th>VIERNES</th>
     </tr>
     <tr> <th>8:15-9:10</th><th>Física</th><th>Filosofía</th>
@@ -14,7 +14,7 @@
     </tr>
     <tr> <th>10:05-11:00</th><th>DyP</th><th>Inglés</th>
     </tr>
-    <tr> <th>11:00-11:30</th><th>RE</th><th>CREO</th>
+    <tr> <th>11:00-11:30</th> <th colspan="2">RECREO</th>
     </tr>
     <tr> <th>11:30-12:25</th><th>His. España</th><th>Lengua</th>
     </tr>
