--- a/plantilla_base.html
+++ b/plantilla_base.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Horario leonardo García De Luna</title>
 </head>
 <body>
   <table border=35>
