--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <a href="https://lgdeluna.github.io/DTP-WEB/html5.html" >html5</a> <br>
 <a href="https://lgdeluna.github.io/DTP-WEB/imagenes.html" >imágenes</a> <br>
 <a href="https://lgdeluna.github.io/DTP-WEB/plantilla_base.html" >plantilla_base</a> <br>
-<a href="https://lgdeluna.github.io/DTP-WEB/img/imagenes2(ahora_es_personal).html" >Imágenes2(ahora es personal)</a> <br>
+<a href="https://lgdeluna.github.io/DTP-WEB/img/imagenes2(ahora_es_personal).html" >Imágenes2(ahora es personal)</a>
+<a href="https://lgdeluna.github.io/DTP-WEB/horario.html" >Horario</a>
+<br>
 <br>
   <a href="https://aulavirtual.murciaeduca.es/course/view.php?id=99660&section=0#tabs-tree-start" target="_blank">Aula Virtual</a> <br>
   <a href="https://github.com/Lgdeluna/DTP-WEB" target="_blank">repositorio de Github</a> <br>
