--- a/listas.html
+++ b/listas.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="utf-8">
+<title>Listas Leonardo García De Luna</title>
+</head>
+<body>
+  <h9>Lista Desordenada</h9>
+  <ul>
+  <li>Elemento 1</li>
+  <li>Elemento 2</li>
+  <li>Elemento 3</li>
+  <li>Elemento 4</li>
+  <li>Elemento 5</li>
+  <li>Elemento 6</li>
+</ul>
+  <h9>Lista ordenada por defecto</h9>
+  <ol>
+  <li>Elemento A</li>
+  <li>Elemento B</li>
+  <li>Elemento C</li>
+</ol>
+  <ol type=I reversed>
+  <li>Elemento A</li>
+  <li>Elemento B</li>
+  <li>Elemento C</li>
+</ol>
+  
 
+</body>
+</html>
