--- a/listas.html
+++ b/listas.html
@@ -20,10 +20,25 @@
   <li>Elemento B</li>
   <li>Elemento C</li>
 </ol>
+  <h9>Lista ordenada inversa en romanos</h9>
   <ol type=I reversed>
   <li>Elemento A</li>
   <li>Elemento B</li>
   <li>Elemento C</li>
+</ol>
+  <h9>Anidamiento lista</h9>
+  <ol>
+  <li>Elemento 1</li>
+  <li>Elemento 2</li>
+    <ol>
+  <li>Subekemento 2.1</li>
+  <li>Subelemento 2.2</li>
+</ol>
+  <li>Elemento 3</li>
+    <ul>
+  <li>Subelemento 3.1</li>
+  <li>Subelemento 3.2</li>
+</ul>
 </ol>
   
 
