--- a/listas.html
+++ b/listas.html
@@ -5,7 +5,7 @@
 <title>Listas Leonardo García De Luna</title>
 </head>
 <body>
-  <h9>Lista Desordenada</h9>
+  <h1>Lista Desordenada</h1>
   <ul>
   <li>Elemento 1</li>
   <li>Elemento 2</li>
@@ -14,24 +14,24 @@
   <li>Elemento 5</li>
   <li>Elemento 6</li>
 </ul>
-  <h9>Lista ordenada por defecto</h9>
+  <h1>Lista ordenada por defecto</h1>
   <ol>
   <li>Elemento A</li>
   <li>Elemento B</li>
   <li>Elemento C</li>
 </ol>
-  <h9>Lista ordenada inversa en romanos</h9>
+  <h1>Lista ordenada inversa en romanos</h1>
   <ol type=I reversed>
   <li>Elemento A</li>
   <li>Elemento B</li>
   <li>Elemento C</li>
 </ol>
-  <h9>Anidamiento lista</h9>
+  <h1>Anidamiento lista</h1>
   <ol>
   <li>Elemento 1</li>
   <li>Elemento 2</li>
     <ol>
-  <li>Subekemento 2.1</li>
+  <li>Subelemento 2.1</li>
   <li>Subelemento 2.2</li>
 </ol>
   <li>Elemento 3</li>
