--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <p>Mi primera página web.</p>
+  <h5>-Mí código-</h5>
 <a href="https://lgdeluna.github.io/DTP-WEB/ExploracionEspacial.html" >Exploración espacial</a> <br>
 <a href="https://lgdeluna.github.io/DTP-WEB/anclas.html" >anclas</a> <br>
 <a href="https://lgdeluna.github.io/DTP-WEB/html5.html" >html5</a> <br>
@@ -14,6 +15,7 @@
 <a href="https://lgdeluna.github.io/DTP-WEB/img/imagenes2(ahora_es_personal).html" >Imágenes2(ahora es personal)</a><br>
 <a href="https://lgdeluna.github.io/DTP-WEB/horario.html" >Horario</a> <br>
 <br>
+  <h5>Enlaces externos</h5>
   <a href="https://aulavirtual.murciaeduca.es/course/view.php?id=99660&section=0#tabs-tree-start" target="_blank">Aula Virtual</a> <br>
   <a href="https://github.com/Lgdeluna/DTP-WEB" target="_blank">repositorio de Github</a> <br>
 
