--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <p>Mi primera página web.</p>
-  <h5>-Mí código-</h5>
+  <h2>---Mí código------</h2>
 <a href="https://lgdeluna.github.io/DTP-WEB/ExploracionEspacial.html" >Exploración espacial</a> <br>
 <a href="https://lgdeluna.github.io/DTP-WEB/anclas.html" >anclas</a> <br>
 <a href="https://lgdeluna.github.io/DTP-WEB/html5.html" >html5</a> <br>
@@ -14,8 +14,9 @@
 <a href="https://lgdeluna.github.io/DTP-WEB/plantilla_base.html" >plantilla_base</a> <br>
 <a href="https://lgdeluna.github.io/DTP-WEB/img/imagenes2(ahora_es_personal).html" >Imágenes2(ahora es personal)</a><br>
 <a href="https://lgdeluna.github.io/DTP-WEB/horario.html" >Horario</a> <br>
+<a href="https://lgdeluna.github.io/DTP-WEB/listas.html" >Listas</a> <br>
 <br>
-  <h5>Enlaces externos</h5>
+  <h2>---Enlaces externos------</h2>
   <a href="https://aulavirtual.murciaeduca.es/course/view.php?id=99660&section=0#tabs-tree-start" target="_blank">Aula Virtual</a> <br>
   <a href="https://github.com/Lgdeluna/DTP-WEB" target="_blank">repositorio de Github</a> <br>
 
